[gd_scene load_steps=5 format=2]

[ext_resource path="res://Items/Power.gd" type="Script" id=1]
[ext_resource path="res://Items/power.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 32.0

[sub_resource type="Animation" id=2]

resource_name = "shine"
length = 2.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( -2.98023e-008, 0.1, 0.2, 0.3, 0.4, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 2, 3, 4, 0, 4, 3, 2, 0 ]
}

[node name="Power" type="Area2D"]
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
playerName = "Player"
power = 2

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
hframes = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("..")
autoplay = "shine"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/shine = SubResource( 2 )
blend_times = [  ]

[node name="LifeTimer" type="Timer" parent="."]
process_mode = 1
wait_time = 3.0
one_shot = true
autostart = true

[node name="DisappearTween" type="Tween" parent="."]
repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[connection signal="area_entered" from="." to="." method="_on_Power_area_entered"]
[connection signal="timeout" from="LifeTimer" to="." method="_on_LiftTimer_timeout"]
[connection signal="tween_completed" from="DisappearTween" to="." method="_on_Tween_tween_completed"]
